--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free API's</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <div class="nav"></div>
+        <nav>
+            <h2>Get Api's</h2>
+            <ul>
+                <li><a href="#">  Products</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/" target="_blank">Free api's</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
