Added main container

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="nav"></div>
+    <div class="nav">
         <nav>
             <h2>Get Api's</h2>
             <ul>
@@ -16,6 +16,35 @@
                 <li><a href="https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/" target="_blank">Free api's</a></li>
             </ul>
         </nav>
+    </div>
+    <div class="maincontainer"></div>
+        <div class="msg">
+            <h2>Explore Free APIs at Your Fingertips</h2>
+            <h4> Interact with a variety of APIs for free, right from your browser</h4>
+        </div>
+        <div class="container">
+            <div>
+                <h2>Generate Random Cat Facts</h2>
+                <div class="subtext">
+                    <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
+                </div>
+                <button class="button-28" role="button" id="btn1">Explore</button>
+            </div>
+            <div>
+                <h2>Generate Random Joke</h2>
+                <div class="subtext">
+                    <p>Get Your Daily Dose of Laughter with Random Jokes from Our API</p>
+                </div>
+                <button class="button-28" role="button" id="btn2">Explore</button>
+            </div>
+            <div>
+                <h2>Generate Facts About Numbers</h2>
+                <div class="subtext">
+                    <p>Uncover Fascinating Number Facts Instantly with Our Random Number Facts API</p>
+                </div>
+                <button class="button-28" role="button" id="btn3">Explore</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
