Added main cointainer and button

--- a/catfct.html
+++ b/catfct.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Generate Random Cat Facts</title>
+    <link rel="stylesheet" href="catfct.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div>
+            <h2>Generate Random Cat Facts</h2>
+            <div class="subtext">
+                <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
+            </div>
+            <button class="button-8" role="button">Button 8</button>
+
+        </div>
+    </div>
 </body>
 </html>
