Added paragraph tag

--- a/catfct.html
+++ b/catfct.html
@@ -13,8 +13,8 @@
             <div class="subtext">
                 <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
             </div>
-            <button class="button-8" role="button">Button 8</button>
-
+            <p id="fact"></p>
+            <button class="button-8" role="button" id="btn">Get Fact</button>
         </div>
     </div>
 </body>
