--- a/catfct.html
+++ b/catfct.html
@@ -17,5 +17,6 @@
             <button class="button-8" role="button" id="btn">Get Fact</button>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
