--- a/catfct.html
+++ b/catfct.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="catfct.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <div class="container">
         <div>
             <h2>Generate Random Cat Facts</h2>
