--- a/catfct.html
+++ b/catfct.html
@@ -14,7 +14,9 @@
             <div class="subtext">
                 <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
             </div>
-            <p id="fact"></p>
+            <div class="fact">
+                <p id="fact"></p>
+            </div>
             <button class="button-8" role="button" id="btn">Get Fact</button>
         </div>
     </div>
