some modification of button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="subtext">
                     <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
                 </div>
-                <a href="catfct.html"><button class="button-28" role="button" id="btn1">Explore</button></a>
+                <a href="catfct.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
             </div>
             <div>
                 <h2>Generate Random Joke</h2>
