Added stylings  for joke page

--- a/joke.html
+++ b/joke.html
@@ -14,7 +14,7 @@
             <div class="subtext">
                 <p>Get Your Daily Dose of Laughter with Random Jokes from Our API</p>
             </div>
-            <div class="fact">
+            <div class="joke">
                 <p id="joke"></p>
             </div>
             <button class="button-8" role="button" id="btn">Get Joke</button>
