Added anchor tag for joke

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="subtext">
                     <p>Get Your Daily Dose of Laughter with Random Jokes from Our API</p>
                 </div>
-                <button class="button-28" role="button" id="btn2">Explore</button>
+                <a href="joke.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
             </div>
             <div>
                 <h2>Generate Facts About Numbers</h2>
