Added contents of the page

--- a/math.html
+++ b/math.html
@@ -6,6 +6,19 @@
     <title>Generate Facts About Numbers</title>
 </head>
 <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <div class="container">
+        <div>
+            <h2>Generate Facts about numbers</h2>
+            <div class="subtext">
+                <p>Get Your Daily Dose of Laughter with Random Jokes from Our API</p>
+            </div>
+            <div class="math">
+                <p id="math"></p>
+            </div>
+            <button class="button-8" role="button" id="btn">Get Joke</button>
+        </div>
+    </div>
+    <script src="math.js"></script>
 </body>
 </html>
