Added nuumbers page wwith anchor tag

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="subtext">
                     <p>Uncover Fascinating Number Facts Instantly with Our Random Number Facts API</p>
                 </div>
-                <button class="button-28" role="button" id="btn3">Explore</button>
+                <a href="math.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
             </div>
         </div>
     </div>
