--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <div class="nav">
         <nav>
             <h2>Get Api's</h2>
-            <ul>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="nav-links">
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/" target="_blank">Free api's</a></li>
+                <li><a href="https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/" target="_blank">Free APIs</a></li>
             </ul>
         </nav>
     </div>
-    <div class="maincontainer"></div>
+    <div class="maincontainer">
         <div class="msg">
             <h2>Explore Free APIs at Your Fingertips</h2>
             <h4> Interact with a variety of APIs for free, right from your browser</h4>
@@ -46,5 +51,6 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
