Edited explore button

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
                 <div class="subtext">
                     <p>Discover Fun & Random Cat Facts Instantly with Our API</p>
                 </div>
-                <a href="catfct.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
+                <button class="button-28" role="button" id="btn1" onclick="window.open('catfct.html','_blank')">Explore</button>
             </div>
             <div>
                 <h2>Generate Random Joke</h2>
                 <div class="subtext">
                     <p>Get Your Daily Dose of Laughter with Random Jokes from Our API</p>
                 </div>
-                <a href="joke.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
+                <button class="button-28" role="button" id="btn1" onclick="window.open('joke.html','_blank')">Explore</button>
             </div>
             <div>
                 <h2>Generate Facts About Numbers</h2>
                 <div class="subtext">
                     <p>Uncover Fascinating Number Facts Instantly with Our Random Number Facts API</p>
                 </div>
-                <a href="math.html" target="_blank"><button class="button-28" role="button" id="btn1">Explore</button></a>
+                <button class="button-28" role="button" id="btn1" onclick="window.open('math.html','_blank')">Explore</button>
             </div>
         </div>
     </div>
